--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.3",
     "angular-in-memory-web-api": "^0.6.0",
+    "classlist": "^2.0.0",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
     "ng-zorro-antd": "^1.1.1",
     "rxjs": "^6.0.0",
+    "web-animations-js": "^2.3.1",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
